[package]
name = "lockur"
version = "0.1.0"
edition = "2021"
description = "A simple cli tool to make file encryption a breeze."
license = "MIT"
repository = "https://github.com/mintsuku/lockur"
authors = ["mintsuku <moxxydev@gmail.com>"]


[dependencies]
aead = "0.5.2"
aes-gcm = "0.10.3"
anyhow = "1.0.81"
clap = "4.5.3"
env_logger = "0.11.3"
log = "0.4.21"
pbkdf2 = "0.12.2"
sha2 = "0.10.8"


[[bin]]
name = "lockur"
path = "src/main.rs"